get rid of soundcloud, upgrade theme and remove customization out of theme and into custom css

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,6 @@
-.grid_episode_detail {
-  background-color:#fff;
+.subscribe_buttons>a {
+  background-color: orange;
+}
+.img-fluid {
+  width: 250px;
 }
