episode 61 & site updates; likely introduced a bug or two ...

--- a/layouts/partials/jumbotron.html
+++ b/layouts/partials/jumbotron.html
@@ -7,6 +7,7 @@
             <p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow.</p>
             <p>Connecting you to founders, developers and leaders from around the globe who give our audience insight into what it takes to massively scale from great idea to leading industry maker.</p>
             <p>Subscribe from the <a href="https://advancetechmedia.org/">homepage</a> and check out new featured video episodes on <a href="https://www.youtube.com/channel/UCix6635bxEr4et8eO4QXSfg">YouTube</a>. You can also like, follow and endorse the podcast on <a href="https://twitter.com/AdvTechPodcast">Twitter</a>, <a href="https://www.facebook.com/advancetechmedia">Facebook</a>, <a href="https://www.linkedin.com/company/advance-tech-media/">LinkedIn</a>, <a href="https://www.instagram.com/advance_tech_media/">Instagram</a> and <a href="https://www.patreon.com/AdvanceTechPodcast?alert=2">Patreon</a>.</p>
+            <p>Executive Producer, video + audio editing, <a href="https://twitter.com/EdoEdikson">Edo Edikson</a></p>
             <p>graphic design - new episode templates, by <a href="https://twitter.com/BitcoinMemeHub">Bitcoin Meme Hub</a></p>
             <p>intro/outro music - Alien Breed (1991) main theme, by A. Brimble
               </p>
